--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "styled-components": "^5.2.1",
     "typeface-anton": "^1.1.13",
     "typeface-dosis": "^1.1.13",
+    "typeface-lobster": "^1.1.13",
+    "typeface-open-sans": "^1.1.13",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
